Test/git-issues/git-issue-1682.dfy.expect
git-issue-1682.dfy(6,9): Error: invalid PrimaryExpression
1 parse errors detected in git-issue-1682.dfy
