Test/git-issues/git-issue-1682.dfy
// RUN: %exits-with 2 %baredafny verify %args "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

method IsUnique(str: array<char>) returns (ret: bool)
{
  ret := multiset
}
